2005-06-09 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b30

	* Fix: Navigator change was in albums.php was wrong.

2005-06-09 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b29

	* Change: Only show Navigator if there is something to navigate in:
		- albums.php

	* Change: Add Errormessage for more info to user in copy_photo.php

	* Change: Tweaked confusing mailmessage in multi_create_user.php

	* Fix: Show "Apply to nested albums" only if we are resizing all elements of in album in resize_photo.php

	* Fix: Highlights of albums where the higlight comes from a subalbum 
	       with non ascii chars where broken because the URL was not urlencoded.

	* Fix: Typo in layout/navmicro.inc (found by Gaile)

2005-05-27  Jay Rossiter <cryptographite@users.sf.net>  1.5.1-cvs-b28

	* Fix: edit_captions was not displaying error messages due to variable
	  misnaming.

2005-05-24 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b27

	* Fix: use_exif was not broken in album properties.
	       Found by Johanm Nenni

	* Change: removed class tab-text, the font color is now controlled by the tab itself.

2005-05-23 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b26

	* Fix: register globals in setup/check_versions.php

2005-05-23 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b25

	* NEW: Added Donald Websters Microthumb Code. => album version and config bump.

	* Change: removed ml_pulldown.inc, 
		  instead created function languageSelector() in lang.php

	* Change: Unified layout for all admin pages.

	* Change: Enhanced classes/HTML/table.php

2005-05-20 Pierre-Luc Paour <paour@users.sourceforge.net>  1.5.1-cvs-b24

	* Change: Applets version 1.4.2-b20.

2005-05-10 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b23

	* Change: Change input for count of files/meta files a input box instead of comboxbox

	* New: added file:lib/valchecks.php with function isValidInteger. Its included via util.php.

2005-05-09  Jay Rossiter <cryptographite@users.sf.net>  1.5.1-cvs-b22

	* Change:  Config wiz typo
